--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="card-header">Вы вышли из системы</div>
             <div class="card-body">
-                <p>Вы вышли из своей учётной записи. Ждём вас снова!</p>
+                <p>Вы вышли из своей учётной записи.</p>
             </div> <!-- card body -->
         </div> <!-- card -->
     </div> <!-- col -->
