--- a/mailer/templates/base.html
+++ b/mailer/templates/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
     <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    {% block extracss %}
+    {% endblock %}
 </head>
 
 <body>
