--- a/templates/template_2.html
+++ b/templates/template_2.html
@@ -1,3 +1,4 @@
 <h1>This is header</h1>
 <p>This is an <strong>important</strong> message. </p>
 <p>And this is <strong>important</strong> content: {{name}}. </p>
+<img src="{% url 'mailer:tracking' sent_email_pk %}">
