--- a/templates/template_3.html
+++ b/templates/template_3.html
@@ -1,3 +1,4 @@
 <h1>Hello, i want invite you to webinar</h1>
 <p>Hello dear <strong>{{name}} {{surname}}</strong>!.</p>
 <p>I want to <strong>invite</strong> you to webinar tomorrow.</p>
+<img src="{% url 'mailer:tracking' sent_email_pk %}">
