--- a/mailer/templates/parts/nav.html
+++ b/mailer/templates/parts/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="{% url 'mailer:index' %}"><span style="color:red">Mail</span>Gunner</a>
+    <a class="navbar-brand" href="{% url 'mailer:index' %}"><span style="color:red">Mail</span>Gunner</a>{% now "jS F Y H:i" %}
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'mailer:index' %}"><span style="color:brown">Рассылка писем</span></a>
