--- a/templates/template_1.html
+++ b/templates/template_1.html
@@ -1,4 +1,4 @@
 <h1>Reminder when it's your birthday</h1>
 <p>Hello dear <strong>{{name}} {{surname}}</strong>!</p>
 <p>I want to <strong>remind</strong> you that your birthday is {{birth_date}}.</p>
-<img src="{{ settings.PROJECT_DOMAIN }}/tracking/{{ sent_email_pk }}/">
+<img src="http://130.193.52.84:8000/tracking/{{ sent_email_pk }}/">
