--- a/templates/template_3.html
+++ b/templates/template_3.html
@@ -1,4 +1,4 @@
 <h1>Hello, i want invite you to webinar</h1>
 <p>Hello dear <strong>{{name}} {{surname}}</strong>!.</p>
 <p>I want to <strong>invite</strong> you to webinar tomorrow.</p>
-<img src="http://130.193.52.84/tracking/{{ sent_email_pk }}/">
+<img src="http://130.193.52.84/tracking/{{ sent_email_pk }}/" height="0px" width="0px">
